--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,11 @@ h1 {
   font-family: 'Cormorant Garamond', 'Proza libre';
   font-size: large;
 }
+h2 {
+  color: plum; 
+  font-family:'Cormorant Garamond', 'Proza libre'; 
+  font-size: medium;
+}
 p { 
   color: palevioletred;
   font-family: 'Proza Libre', ' Cormorant Garamond';
