--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,7 @@ h1 {
   color: plum;
   font-family: 'Cormorant Garamond', 'Proza libre';
   font-size: large;
+  font-weight: bolder;
 }
 h2 {
   color: plum; 
