--- a/styles/main.css
+++ b/styles/main.css
@@ -2,17 +2,17 @@
   width: 100px}
 
 body {
-  background-color: palegreen;
+  background-color: rgb(200, 152, 251);
   text-align: center;  
 }
 h1 { 
-  color: plum;
+  color: rgb(231, 221, 249);
   font-family: 'Cormorant Garamond', 'Proza libre';
   font-size: large;
   font-weight: bolder;
 }
 h2 {
-  color: plum; 
+  color:  rgb(231, 221, 249); 
   font-family:'Cormorant Garamond', 'Proza libre'; 
   font-size: medium;
 }
