--- a/styles/main.css
+++ b/styles/main.css
@@ -44,7 +44,7 @@ h2 {
   text-align: center;
 }
 p { 
-  color: palevioletred;
+  color: rgb(49, 92, 93);
   font-family: 'Proza Libre', ' Cormorant Garamond';
   font-size: large;
   font-weight: bolder;
