--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,3 @@
-@media (max-height: 320px) {body 
-  { 
-  background-color: floralwhite;
-}}
-@media (max-height: 768px) {body 
-  { 
-  background-color: goldenrod;
-}}
-@media (max-height: 1200px) {body 
-  { 
-  background-color: rgb(255, 166, 0);
-}}
 div { margin-top: 20px;
   margin-bottom: 10px;
   margin-left: 20px; 
@@ -50,3 +38,15 @@ p {
   font-weight: bolder;
   text-align: center;
 }
+@media (min-height: 320px) {body 
+  { 
+  background-color: floralwhite;
+}}
+@media (min-height: 768px) {body 
+  { 
+  background-color: goldenrod;
+}}
+@media (min-height: 1200px) {body 
+  { 
+  background-color: rgb(255, 166, 0);
+}}
