--- a/styles/main.css
+++ b/styles/main.css
@@ -38,9 +38,9 @@ p {
   font-weight: bolder;
   text-align: center;
 }
-.gold-text [
-  color: gold;
-]
+.bisque-background {
+  background-color: bisque;
+}
 @media (min-height: 320px) {body 
   { 
   background-color: floralwhite;
