--- a/styles/main.css
+++ b/styles/main.css
@@ -41,15 +41,15 @@ p {
 .bisque-background {
   background-color: bisque;
 }
-@media (min-height: 320px) {body 
+@media (min-width: 320px) {body 
   { 
   background-color: floralwhite;
 }}
-@media (min-height: 768px) {body 
+@media (min-width: 768px) {body 
   { 
   background-color: goldenrod;
 }}
-@media (min-height: 1200px) {body 
+@media (min-width: 1200px) {body 
   { 
   background-color: rgb(255, 166, 0);
 }}
