--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,14 @@
-div { margin-top: 20px;
-  margin-bottom: 10px;
-  margin-left: 20px; 
-  margin-right: 10px;
+div { margin-top: 80px;
+  margin-bottom: 60px;
+  margin-left: 80px; 
+  margin-right: 60px;
   background-color: rgb(196, 254, 255);
   border-radius: 10px;
 }
 div.relative {
   position: relative;
   left: 50px;
+  right: 50px;
 }
 #footer {
   position: fixed;
