--- a/styles/main.css
+++ b/styles/main.css
@@ -50,9 +50,9 @@ p {
   text-align: center;
 }
 
-.pink-text [
+.pink-text {
   color: pink;
-]
+}
 
 .bisque-background {
   background-color: bisque;
