--- a/styles/draft.css
+++ b/styles/draft.css
@@ -11,3 +11,12 @@ margin: 0;
 padding: 0;
 font-family: 'Arima Madurai', cursive;
 }
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: linear-gradient(rgb(60, 60, 60), rgb(179, 177, 177));
+  overflow: hidden;
+}
