reset css added

--- a/styles/draft.css
+++ b/styles/draft.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Arima+Madurai&family=Rakkas&family=Shrikhand&display=swap');
 
-a { 
+* { 
 margin: 0;
 padding: 0;
 font-family: 'Arima Madurai', cursive; font-family: 'Rakkas', cursive;font-family: 'Shrikhand', cursive;
