--- a/styles/draft.css
+++ b/styles/draft.css
@@ -87,7 +87,7 @@ ul li a:hover:after {
 
 @media (min-width: 320px) {body 
   { 
-  background-color: floralwhite;
+  background-color: rgb(136, 241, 110);
 }}
 @media (min-width: 768px) {body 
   { 
